# TobyG

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: tobyg.h  tobyg_const.h  tobyg_game_gamemgr.h  tobyg_gfx_camera.h  tobyg_gfx_gfx.h  tobyg_gfx_instance.h  tobyg_gfx_mesh.h  tobyg_gfx_meshbatch.h  tobyg_gfx_renderer.h  tobyg_gfx_texture.h  tobyg_io_file.h  tobyg_io_path.h  tobyg_io_util.h
src/game/: gamemgr.c  gamemgr.h
src/gfx/: camera.c  camera.h  gfx.c  gfx.h  gl.c  gl.h  instance.c  instance.h  math.c  math.h  mesh.c  mesh.h  meshbatch.c  meshbatch.h  renderer.c  renderer.h  texture.c  texture.h
src/io/: file.c  file.h  path.c  path.h  util.c  util.h
